Changelog
=========

9.3-dev - (unreleased)
----------------------

9.2 - (2014-02-13)
------------------
* Change: updated design elements documentation with
  callouts and keyfacts. Improved order and other minor tweaks.
  [demarant]
* Bug fix: fixed TinyMCE popup zoom issue within Chrome browser
  [ichimdav refs #18352]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.design
  [ichimdav refs #18223]
* Feature: eeatogglefullscreen now has an option within tinymce controlpanel
  which assigns the contenttypes that enter fullscreen when clicking on the
  TinyMCE text fields
  [ichimdav fixes #18195]
* Feature: added TinyMCE eeatogglefullscreen plugin which exits fullscreen
  when clicking outside the editor area
  [ichimdav refs #18223]
* Bug fix: resizing the window on fullscreen no longer displays the content
  outside of the TinyMCE fullscreen div
  [ichimdav refs #18223]
* Bug fix: Hide the span languageCodes in the themes-tags.
  [prospchr refs #17807]

9.1 - (2014-02-03)
------------------
* Bug fix: improved presentation mode. removed authorname. cover image now
  fits in first slide.
  [demarant refs #16916]
* Bug fix: Properly closed comment in difftool styling
  [olimpiurob refs #17702]
* [DONE] Upgrade step: from www/portal_tinymce/@@tinymce-controlpanel:
    - Run it only after upgrading eea.design through the automatic upgrade step
    - Move plonestyle editor plugin to the left select form in order to disable it
    - replace the styles from the layout tab with the list found within the ticket as attachment
    - [ichimdav refs #18180]
* [DONE] Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.design
  [ichimdav #18180]
* Change: removed tiny_mce.js from eea.design, opting to move the fixes directly
  to Products.TinyMCE
  [ichimdav refs #18200]
* Bug fix: preserve TinyMCE width when resizing browser window
  [ichimdav refs #18189]