@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+
+    <stylesheet title=""
+                id="presentational_styles.css"
+                media="screen" rel="stylesheet" rendering="link"
+                cacheable="True" compression="safe" cookable="True"
+                conditionalcomment=""
+                expression=""
+                insert-before="ploneCustom.css"
+            />
+
+</object>
