@@ -3,5 +3,168 @@
 /* <dtml-with base_properties> (do not remove this :) */
 /* <dtml-call "REQUEST.set('portal_url', portal_url())"> (not this either :) */
 
+/* .system-message and #error-handling are reST error indicators */
+/* message styles derived from fontAwesome  #15235 */
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('&dtml-portal_url;/fontawesome-webfont.eot?v=4.0.3');
+  src: url('&dtml-portal_url;/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'),
+  url('&dtml-portal_url;/fontawesome-webfont.woff?v=4.0.3') format('woff'),
+  url('&dtml-portal_url;/fontawesome-webfont.ttf?v=4.0.3') format('truetype'),
+  url('&dtml-portal_url;/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+dl.portalMessage dt,
+dl.system-message dt {
+    color: &dtml-fontColor;;
+}
+
+div.attention, div.caution,
+div.danger, div.error, div.hint,
+div.important, div.note, div.tip,
+div.warning,
+#error-handling,
+.portalMessage,
+.system-message {
+    background-color: &dtml-corporateBlueBackgroundColor;;
+    color: &dtml-fontColor;;
+    font-size: 120%;
+    margin: 1em 0;
+    padding: 1em 1.5em 1em 5.5em;
+    vertical-align: middle;
+    border: none;
+}
+
+
+.extra .attention,
+.extra .caution,
+.extra .danger,
+.extra .error,
+.extra .hint,
+.extra .important,
+.extra .note,
+.extra .tip,
+.extra .warning {
+    padding-left: 1.5em;
+}
+
+
+.portalMessage:before, .portalMessage .eea-icon:before {
+    float: left;
+    display: block;
+    font-family: 'FontAwesome';
+    font-weight: normal;
+    font-style: normal;
+    line-height: inherit;
+    text-decoration: inherit;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    speak: none;
+    margin-left: -2.3em;
+    font-size: 150%;
+}
+
+div.attention:before, div.caution:before,
+div.danger:before, div.error:before, div.hint:before,
+div.important:before, div.note:before, div.tip:before,
+div.warning:before {
+    float: left;
+    display: block;
+    margin-right: .3em;
+    font-family: 'FontAwesome';
+}
+
+div.hint, div.tip, div.note,
+.ideaMessage,
+.informationMessage,
+.noteMessage,
+.smileyMessage,
+.thumbsUpMessage,
+.yesMessage {
+    background-color: &dtml-corporateBlueBackgroundColor;;
+}
+
+div.attention, div.caution,
+div.danger, div.error, div.important,
+div.warning,
+#error-handling,
+.errorMessage,
+.warningMessage {
+    background-color: #FFFABE;
+}
+
+div.attention:before, div.caution:before,
+div.danger:before, div.important:before,
+div.warning:before,
+.attentionMessage:before {
+    content: "&dtml-eea-icon-flash;";
+    vertical-align: baseline;
+    line-height: 2;
+}
+
+.attentionMessage:before {
+    line-height: 1;
+}
+
+.attentionMessage,
+.noMessage {
+    background-color: #FFFABE;
+}
+
+div.error,
+.errorMessage {
+    color: red;
+}
+
+.ideaMessage:before {
+    content: "&dtml-eea-icon-lightbulb-o;";
+}
+
+.informationMessage:before {
+    content: "&dtml-eea-icon-info-circle;";
+}
+
+.info:before {
+    content: "&dtml-eea-icon-info-circle;";
+}
+
+.noMessage:before {
+    content: "&dtml-eea-icon-times;";
+}
+
+.noteMessage:before {
+    content: "&dtml-eea-icon-file-text;";
+}
+
+.rosetteMessage:before {
+    content: "&dtml-eea-icon-globe;";
+}
+
+.rosetteMessage {
+    color: #666666;
+}
+
+.smileyMessage:before {
+    content: "&dtml-eea-icon-smile-o;";
+}
+
+.thumbsUpMessage:before {
+    content: "&dtml-eea-icon-thumbs-up;";
+}
+
+div.error:before,
+.errorMessage:before,
+.error:before,
+.warningMessage:before
+{
+    content: "&dtml-eea-icon-exclamation-triangle;";
+}
+
+.yesMessage:before {
+    content: "&dtml-eea-icon-check;";
+}
 
 /* </dtml-with> */
