@@ -4,6 +4,19 @@
         i18n_domain="eea">
 
     <genericsetup:upgradeSteps
+            source="9.2"
+            destination="9.3"
+            profile="eea.design:default">
+
+        <genericsetup:upgradeDepends
+                title="Import all steps from eea.design profile upgrade 9.3"
+                description="Adds presentationalStyles css"
+                import_profile="eea.design:upgrade93"
+                />
+
+    </genericsetup:upgradeSteps>
+
+    <genericsetup:upgradeSteps
             source="9.1"
             destination="9.2"
             profile="eea.design:default">
